--- a/playease.html
+++ b/playease.html
@@ -515,10 +515,15 @@ _eventMapping = {
 		var ui, chat;
 		var users = document.getElementById('ol-users');
 		var pw = document.getElementById('playwrap');
-		var Event = playease.events.Event;
-		var UIEvent = playease.events.UIEvent;
+		var utils = playease.utils,
+			events = playease.events,
+			Event = events.Event,
+			MediaEvent = events.MediaEven,
+			UIEvent = events.UIEvent,
+			index = 0;
 
 		ui = playease.ui();
+		ui.addEventListener(MediaEvent.SCREENSHOT, onScreenshot);
 		ui.addEventListener(UIEvent.FULLPAGE, onFullpage);
 		ui.addEventListener(Event.ERROR, console.error);
 		ui.setup(playwrap, {
@@ -561,6 +566,20 @@ _eventMapping = {
 				visibility: true,
 			}],
 		});
+
+		function onScreenshot(e) {
+			var arr = e.data.image.split(',');
+			var ret = arr[0].match(/^data:(image\/(.+));base64$/);
+			if (ret === null) {
+				console.error('The string did not match the expected pattern.');
+				return;
+			}
+
+			var link = document.createElement('a');
+			link.href = e.data.image;
+			link.download = 'screenshot-' + utils.padStart(index++, 3, '0') + '.' + ret[2];
+			link.click();
+		}
 
 		function onFullpage(e) {
 			pw.style.margin = e.data.status ? '0' : '0 auto';
