--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -101,12 +101,17 @@
 		var users = document.getElementById('ol-users');
 		var pw = document.getElementById('playwrap');
 		var cw = document.getElementById('chatwrap');
-		var Event = playease.events.Event;
-		var UIEvent = playease.events.UIEvent;
+		var utils = playease.utils,
+			events = playease.events,
+			Event = events.Event,
+			MediaEvent = events.MediaEven,
+			UIEvent = events.UIEvent,
+			index = 0;
 
 		pw.style.height = window.innerWidth * 9 / 16 + 'px';
 
 		ui = playease.ui();
+		ui.addEventListener(MediaEvent.SCREENSHOT, onScreenshot);
 		ui.addEventListener(UIEvent.RESIZE, onResize);
 		ui.addEventListener(Event.ERROR, console.error);
 		ui.setup(playwrap, {
@@ -155,6 +160,20 @@
 				visibility: true,
 			}],
 		});
+
+		function onScreenshot(e) {
+			var arr = e.data.image.split(',');
+			var ret = arr[0].match(/^data:(image\/(.+));base64$/);
+			if (ret === null) {
+				console.error('The string did not match the expected pattern.');
+				return;
+			}
+
+			var link = document.createElement('a');
+			link.href = e.data.image;
+			link.download = 'screenshot-' + utils.padStart(index++, 3, '0') + '.' + ret[2];
+			link.click();
+		}
 
 		function onResize(e) {
 			if (playease.OS.isAndroid && playease.Browser.isQQBrowser) {
