--- a/playease.html
+++ b/playease.html
@@ -518,7 +518,7 @@ _eventMapping = {
 		var utils = playease.utils,
 			events = playease.events,
 			Event = events.Event,
-			MediaEvent = events.MediaEven,
+			MediaEvent = events.MediaEvent,
 			UIEvent = events.UIEvent,
 			index = 0;
 
