--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -104,7 +104,7 @@
 		var utils = playease.utils,
 			events = playease.events,
 			Event = events.Event,
-			MediaEvent = events.MediaEven,
+			MediaEvent = events.MediaEvent,
 			UIEvent = events.UIEvent,
 			index = 0;
 
