--- a/cms/index.html
+++ b/cms/index.html
@@ -133,7 +133,7 @@
 				service: {
 					script: 'js/sw.js',
 					scope: 'js/',
-					enable: true,
+					enable: false,
 				},
 				sources: [{
 					file: 'ws://39.98.40.193/live/_definst_/stream02.flv',
