--- a/playease.html
+++ b/playease.html
@@ -549,7 +549,7 @@ _eventMapping = {
 			service: {
 				script: 'js/sw.js',
 				scope: 'js/',
-				enable: true,
+				enable: false,
 			},
 			sources: [{
 				file: '/vod/sample.flv',
