--- a/solutions.html
+++ b/solutions.html
@@ -267,7 +267,7 @@
 			service: {
 				script: 'js/sw.js',
 				scope: 'js/',
-				enable: true,
+				enable: false,
 			},
 			sources: [{
 				file: 'http://39.98.40.193/live/_definst_/stream02.flv',
