--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -178,9 +178,7 @@
 		function onClick(e) {
 			switch (e.data.name) {
 				case 'report':
-					if (playease.LOGGER) {
-						utils.logger.save();
-					}
+					ui.logger.flush();
 					break;
 			}
 		}
