--- a/solutions.html
+++ b/solutions.html
@@ -239,7 +239,7 @@
 			UIEvent = events.UIEvent,
 			index = 0;
 
-		ui = playease.ui();
+		ui = playease.ui.create({ mode: 'file' });
 		ui.addEventListener('ready', onReady);
 		ui.addEventListener('click', onClick);
 		ui.addEventListener(MediaEvent.SCREENSHOT, onScreenshot);
